--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ h1 {
     color: #011C26;
     text-align:center;
 }
+h2 {
+    text-align: center;
+}
 a {
     text-decoration: none;
     color: whitesmoke;
@@ -13,11 +16,16 @@ a {
 a:hover {
     color:#011C26;
 }
-.assignment {
+.assignments {
     display: flex;
+    flex-wrap: wrap;
+}
+.assignment {
+    width: 22%;
     padding: 10px;
     background: #8FADBF;
     margin: 10px;
+    padding: 20px 10px;
     border-radius: 20px;
  
 }
@@ -25,6 +33,9 @@ a:hover {
     width: 200px;
     height: 200px;
     margin: 10px;
+    display: block;
+    margin: auto;
+
 }
 .assignment img:hover {
     border: 2px solid #011C26;
